# megabit-coproc-simulator

./: Cargo.toml  build.sh
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml
frontend/src/: main.rs  matrix.rs
src/: main.rs  messages.rs
src/backend/: serial.rs  simulator.rs  web_server.rs
src/frontend/: debug_led.rs  matrix.rs  mod.rs  user_button.rs  websocket_provider.rs
