[package]
name = "megabit-coproc-simulator"
version = "0.1.0"
edition = "2021"

[features]
ssr = [
    "dep:async-channel",
    "dep:axum",
    "dep:axum-extra",
    "dep:futures-util",
    "dep:nix",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber"
] # Backend
csr = [
    "dep:gloo",
    "dep:wasm-bindgen",
    "dep:web-sys",
    "dep:yew"
] # Frontend

[dependencies]
# Backend
async-channel = { version = "2.1", optional = true }
axum = { version = "0.7.4", features = ["ws"], optional = true }
axum-extra = { version = "0.9.1", features = ["typed-header"], optional = true }
futures-util = { version = "0.3", optional = true }
nix = { version = "0.27", features = ["term"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
tower = { version = "0.4", features = ["util"], optional = true }
tower-http = { version = "0.5.0", features = ["fs", "trace"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Frontend
gloo = { version = "0.11", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "CanvasRenderingContext2d"], optional = true }
yew = { version = "0.21", features = ["csr"], optional = true }