[package]
name = "megabit-coproc-simulator"
version = "0.1.0"
edition = "2021"

[features]
backend = [
    "dep:async-channel",
    "dep:axum",
    "dep:axum-extra",
    "dep:cobs",
    "dep:futures-util",
    "dep:nix",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "tokio/full"
] # Backend
frontend = [
    "dep:futures",
    "dep:gloo",
    "dep:gloo-net",
    "dep:log",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:wasm-logger",
    "dep:web-sys",
    "dep:yew"
] # Frontend

[dependencies]
# Shared
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Backend
async-channel = { version = "2.1", optional = true }
axum = { version = "0.7.4", features = ["ws"], optional = true }
axum-extra = { version = "0.9.1", features = ["typed-header"], optional = true }
cobs = { version = "0.2", optional = true }
futures-util = { version = "0.3", optional = true }
nix = { version = "0.27", features = ["term"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
tower = { version = "0.4", features = ["util"], optional = true }
tower-http = { version = "0.5.0", features = ["fs", "trace"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Frontend
futures = { version = "0.3", optional = true }
gloo = { version = "0.11", features = ["net"], optional = true }
gloo-net = { version = "0.5", features = ["websocket"], optional = true }
log = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
wasm-logger = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "CanvasRenderingContext2d"], optional = true }
yew = { version = "0.21", features = ["csr"], optional = true }