[package]
name = "megabit-coproc-simulator-frontend"
version = "0.1.0"
edition = "2021"

[build]
target = "wasm32-unknown-unknown"

[dependencies]
gloo = "0.11"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "CanvasRenderingContext2d"] }
yew = { version = "0.21", features = ["csr"] }